--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Basic</title>
+    <title>Expunge Colorado Screener</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
